--- a/intro/package.json
+++ b/intro/package.json
@@ -11,6 +11,7 @@
   "author": "Ariel Weinberger",
   "license": "ISC",
   "devDependencies": {
+    "tsx": "^4.7.0",
     "typescript": "^5.2.2"
   },
   "dependencies": {
